--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Sifat Moonjerin
 email: moonjerin.sifat@gmail.com
 resume: https://drive.google.com/file/d/1ZqzDRJkyEefrP9x2HzYReLMphzW6CDbk/view
+leetcode: https://leetcode.com/sifatmoonjerin/
 description: >- # this means to ignore newlines until "baseurl:"
   Sifat's personal blog.
 url: "https://sifatmoonjerin.github.io"
